--- a/SER.ipynb
+++ b/SER.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DataFlair - Extract features (mfcc, chroma, mel) from a sound file\n",
+    "#Extract features (mfcc, chroma, mel) from a sound file\n",
     "def extract_feature(file_name, mfcc, chroma, mel):\n",
     "    with soundfile.SoundFile(file_name) as sound_file:\n",
     "        X = sound_file.read(dtype=\"float32\")\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DataFlair - Emotions in the RAVDESS dataset\n",
+    "#Emotions in the RAVDESS dataset\n",
     "emotions={\n",
     "  '01':'neutral',\n",
     "  '02':'calm',\n",
@@ -58,7 +58,7 @@
     "  '07':'disgust',\n",
     "  '08':'surprised'\n",
     "}\n",
-    "#DataFlair - Emotions to observe\n",
+    "#Emotions to observe\n",
     "observed_emotions=['happy', 'sad', 'angry', 'neutral']"
    ]
   },
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DataFlair - Load the data and extract features for each sound file\n",
+    "#Load the data and extract features for each sound file\n",
     "def load_data(test_size=0.2):\n",
     "    x,y=[],[]\n",
     "    for file in glob.glob(\"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_*\\\\*.wav\"):\n",
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DataFlair - Split the dataset\n",
+    "#Split the dataset\n",
     "x_train,x_test,y_train,y_test=load_data(test_size=0.2)"
    ]
   },
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "#DataFlair - Get the shape of the training and testing datasets\n",
+    "#Get the shape of the training and testing datasets\n",
     "print((x_train.shape[0], x_test.shape[0]))"
    ]
   },
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "#DataFlair - Get the number of features extracted\n",
+    "#Get the number of features extracted\n",
     "print(f'Features extracted: {x_train.shape[1]}')"
    ]
   },
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DataFlair - Initialize the Multi Layer Perceptron Classifier\n",
+    "#Initialize the Multi Layer Perceptron Classifier\n",
     "model=MLPClassifier(alpha=0.01, batch_size=256, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=500)"
    ]
   },
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "#DataFlair - Train the model\n",
+    "#Train the model\n",
     "model.fit(x_train,y_train)"
    ]
   },
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "#DataFlair - Calculate the accuracy of our model\n",
+    "#Calculate the accuracy of our model\n",
     "accuracy=accuracy_score(y_true=y_test, y_pred=y_pred)\n",
     "#DataFlair - Print the accuracy\n",
     "print(\"Accuracy: {:.2f}%\".format(accuracy*100))"
