--- a/SER.ipynb
+++ b/SER.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DataFlair - Predict for the test set\n",
+    "#Predict for the test set\n",
     "y_pred=model.predict(x_test)"
    ]
   },
@@ -186,7 +186,7 @@
    "source": [
     "#Calculate the accuracy of our model\n",
     "accuracy=accuracy_score(y_true=y_test, y_pred=y_pred)\n",
-    "#DataFlair - Print the accuracy\n",
+    "#Print the accuracy\n",
     "print(\"Accuracy: {:.2f}%\".format(accuracy*100))"
    ]
   },
