--- a/SER.ipynb
+++ b/SER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,23 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "import sys\n",
+    "import wave\n",
+    "import struct\n",
+    "from scipy import signal\n",
+    "from itertools import chain\n",
+    "from numpy import *\n",
+    "from scipy import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Extract features (mfcc, chroma, mel) from a sound file\n",
+    "#DataFlair - Extract features (mfcc, chroma, mel) from a sound file\n",
     "def extract_feature(file_name, mfcc, chroma, mel):\n",
     "    with soundfile.SoundFile(file_name) as sound_file:\n",
     "        X = sound_file.read(dtype=\"float32\")\n",
@@ -38,16 +45,81 @@
     "        if mel:\n",
     "            mel=np.mean(librosa.feature.melspectrogram(X, sr=sample_rate).T,axis=0)\n",
     "            result=np.hstack((result, mel))\n",
+    "        result=np.hstack((result,decision(file_name)))\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Emotions in the RAVDESS dataset\n",
+    "def readWaveFile(fileName):\n",
+    "    waveFile = wave.open(fileName,'r')\n",
+    "    channels = waveFile.getnchannels()\n",
+    "    sampWidth = waveFile.getsampwidth()\n",
+    "    framesNumber = waveFile.getnframes()\n",
+    "    frameRate = waveFile.getframerate()\n",
+    "    frames = waveFile.readframes(framesNumber)\n",
+    "    data = struct.unpack(\"%dh\" %  channels*framesNumber, frames)\n",
+    "    oneChannelData = data[::channels]\n",
+    "    oneChannelData = list(chain(oneChannelData))\n",
+    "    framesNumber = len(oneChannelData)\n",
+    "    waveFile.close()\n",
+    "    return oneChannelData, channels, sampWidth, frameRate, framesNumber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getFreq(data,framesNumber,frameRate):\n",
+    "    time = float(framesNumber) / frameRate\n",
+    "    data = data * signal.nuttall(framesNumber)\n",
+    "    dataFFT = fft(data)\n",
+    "    absFFT = abs(dataFFT)\n",
+    "    logAbsFFT = np.log(absFFT)\n",
+    "    hps = copy(logAbsFFT)\n",
+    "    for h in np.arange(2, 6):\n",
+    "        decim = signal.decimate(logAbsFFT, int(h))\n",
+    "        hps[:len(decim)] += decim\n",
+    "    start = 150\n",
+    "    peak = np.argmax(hps[start::])\n",
+    "    fundamental = ((start+peak)/time)\n",
+    "    return fundamental"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=0\n",
+    "b=0\n",
+    "def decision(file_name):\n",
+    "    data, channels, sampwidth, frameRate, framesNumber = readWaveFile(file_name)\n",
+    "    freq = getFreq(data, framesNumber, frameRate)\n",
+    "    global a\n",
+    "    global b\n",
+    "    if freq>200:\n",
+    "        a=a+1\n",
+    "        return [1]\n",
+    "    else:\n",
+    "        b=b+1\n",
+    "        return [-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DataFlair - Emotions in the RAVDESS dataset\n",
     "emotions={\n",
     "  '01':'neutral',\n",
     "  '02':'calm',\n",
@@ -58,17 +130,17 @@
     "  '07':'disgust',\n",
     "  '08':'surprised'\n",
     "}\n",
-    "#Emotions to observe\n",
-    "observed_emotions=['happy', 'sad', 'angry', 'neutral']"
+    "#DataFlair - Emotions to observe\n",
+    "observed_emotions=['neutral', 'happy', 'sad', 'angry']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the data and extract features for each sound file\n",
+    "#DataFlair - Load the data and extract features for each sound file\n",
     "def load_data(test_size=0.2):\n",
     "    x,y=[],[]\n",
     "    for file in glob.glob(\"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_*\\\\*.wav\"):\n",
@@ -76,6 +148,20 @@
     "        emotion=emotions[file_name.split(\"-\")[2]]\n",
     "        if emotion not in observed_emotions:\n",
     "            continue\n",
+    "        intensity = file_name.split(\"-\")[3]\n",
+    "        #if int(intensity)== 2:\n",
+    "        #    continue\n",
+    "        feature=extract_feature(file, mfcc=True, chroma=True, mel=True)\n",
+    "        x.append(feature)\n",
+    "        y.append(emotion)\n",
+    "    for file in glob.glob(\"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_*\\\\*.wav\"):\n",
+    "        file_name=os.path.basename(file)\n",
+    "        emotion=emotions[file_name.split(\"-\")[2]]\n",
+    "        if emotion not in observed_emotions:\n",
+    "            continue\n",
+    "        intensity = file_name.split(\"-\")[3]\n",
+    "        #if int(intensity)== 2:\n",
+    "        #    continue\n",
     "        feature=extract_feature(file, mfcc=True, chroma=True, mel=True)\n",
     "        x.append(feature)\n",
     "        y.append(emotion)\n",
@@ -84,111 +170,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\anaconda3\\lib\\site-packages\\scipy\\signal\\_arraytools.py:45: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  b = a[a_slice]\n",
+      "C:\\Users\\hp\\anaconda3\\lib\\site-packages\\scipy\\signal\\signaltools.py:3463: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return y[sl]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Split the dataset\n",
+    "#DataFlair - Split the dataset\n",
     "x_train,x_test,y_train,y_test=load_data(test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(537, 135)\n"
+      "(1075, 269)\n"
      ]
     }
    ],
    "source": [
-    "#Get the shape of the training and testing datasets\n",
+    "#DataFlair - Get the shape of the training and testing datasets\n",
     "print((x_train.shape[0], x_test.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features extracted: 180\n"
+      "Features extracted: 181\n"
      ]
     }
    ],
    "source": [
-    "#Get the number of features extracted\n",
+    "#DataFlair - Get the number of features extracted\n",
     "print(f'Features extracted: {x_train.shape[1]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Initialize the Multi Layer Perceptron Classifier\n",
-    "model=MLPClassifier(alpha=0.01, batch_size=256, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=500)"
+    "#DataFlair - Initialize the Multi Layer Perceptron Classifier\n",
+    "model=MLPClassifier(alpha=0.001, batch_size=32, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=250)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MLPClassifier(alpha=0.01, batch_size=256, hidden_layer_sizes=(300,),\n",
-       "              learning_rate='adaptive', max_iter=500)"
+       "MLPClassifier(alpha=0.001, batch_size=32, hidden_layer_sizes=(300,),\n",
+       "              learning_rate='adaptive', max_iter=250)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Train the model\n",
+    "#DataFlair - Train the model\n",
     "model.fit(x_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Predict for the test set\n",
+    "#DataFlair - Predict for the test set\n",
     "y_pred=model.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 62.96%\n"
+      "Accuracy: 91.45%\n"
      ]
     }
    ],
    "source": [
-    "#Calculate the accuracy of our model\n",
+    "#DataFlair - Calculate the accuracy of our model\n",
     "accuracy=accuracy_score(y_true=y_test, y_pred=y_pred)\n",
-    "#Print the accuracy\n",
+    "#DataFlair - Print the accuracy\n",
     "print(\"Accuracy: {:.2f}%\".format(accuracy*100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "734 610\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
