--- a/SER-livetesting.ipynb
+++ b/SER-livetesting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,10 @@
     "from itertools import chain\n",
     "from numpy import *\n",
     "from scipy import *\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score,recall_score,precision_score,f1_score\n",
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
     "\n",
     "import pyaudio\n",
     "from sys import byteorder\n",
@@ -30,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "a=0\n",
     "b=0\n",
+    "c=0\n",
     "def decision(file_name):\n",
     "    data, channels, sampwidth, frameRate, framesNumber = readWaveFile(file_name)\n",
     "    freq = getFreq(data, framesNumber, frameRate)\n",
@@ -121,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "#DataFlair - Load the data and extract features for each sound file\n",
-    "def load_data(test_size=0.2):\n",
+    "def load_data(test_size=0.15):\n",
     "    x,y=[],[]\n",
+    "    global c\n",
     "    for file in glob.glob(\"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_*\\\\*.wav\"):\n",
     "        file_name=os.path.basename(file)\n",
     "        emotion=emotions[file_name.split(\"-\")[2]]\n",
@@ -160,23 +166,16 @@
     "        feature=extract_feature(file, mfcc=True, chroma=True, mel=True)\n",
     "        x.append(feature)\n",
     "        y.append(emotion)\n",
-    "    for file in glob.glob(\"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_*\\\\*.wav\"):\n",
-    "        file_name=os.path.basename(file)\n",
-    "        emotion=emotions[file_name.split(\"-\")[2]]\n",
-    "        if emotion not in observed_emotions:\n",
-    "            continue\n",
-    "        intensity = file_name.split(\"-\")[3]\n",
-    "        #if int(intensity)== 2:\n",
-    "        #    continue\n",
-    "        feature=extract_feature(file, mfcc=True, chroma=True, mel=True)\n",
-    "        x.append(feature)\n",
-    "        y.append(emotion)\n",
+    "        if c==0 or c==100 or c==200 or c==300 or c==400 or c==500 or c==600:\n",
+    "            print(feature[171:181])\n",
+    "            print(emotion)\n",
+    "        c=c+1\n",
     "    return train_test_split(np.array(x), y, test_size=test_size, train_size= 0.8, random_state=9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -188,23 +187,56 @@
       "C:\\Users\\hp\\anaconda3\\lib\\site-packages\\scipy\\signal\\signaltools.py:3463: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
       "  return y[sl]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6.07571883e-06  4.48540641e-06  4.12061945e-06  3.71885676e-06\n",
+      "  3.93320988e-06  3.48488311e-06  4.07551761e-06  1.81608038e-06\n",
+      "  7.83327664e-07 -1.00000000e+00]\n",
+      "neutral\n",
+      "[4.68274666e-04 4.58129798e-04 3.64719017e-04 5.36046631e-04\n",
+      " 3.31773423e-04 1.80570860e-04 2.06809360e-04 1.82721749e-04\n",
+      " 1.27061270e-04 1.00000000e+00]\n",
+      "sad\n",
+      "[2.28175013e-05 2.60946526e-05 3.25015717e-05 1.78280370e-05\n",
+      " 1.49358038e-05 1.03523662e-05 8.84829660e-06 6.52037261e-06\n",
+      " 3.03962543e-06 1.00000000e+00]\n",
+      "happy\n",
+      "[8.18302680e-04 8.30914476e-04 6.90905959e-04 7.62591080e-04\n",
+      " 8.57935869e-04 7.65038130e-04 4.82364238e-04 2.77969462e-04\n",
+      " 1.12254376e-04 1.00000000e+00]\n",
+      "angry\n",
+      "[ 2.38386783e-04  2.71639728e-04  2.67191179e-04  2.19359368e-04\n",
+      "  1.42450765e-04  1.35665148e-04  9.56963631e-05  4.96343637e-05\n",
+      "  2.71927838e-05 -1.00000000e+00]\n",
+      "happy\n",
+      "[0.01540336 0.01677896 0.01685238 0.01699721 0.01622378 0.01399284\n",
+      " 0.00301359 0.00172012 0.00107116 1.        ]\n",
+      "angry\n",
+      "[ 1.20442382e-04  1.68039813e-04  1.00067489e-04  9.98143150e-05\n",
+      "  1.04513849e-04  6.49429712e-05  3.00573429e-05  1.34556849e-05\n",
+      "  1.59591800e-05 -1.00000000e+00]\n",
+      "sad\n"
+     ]
     }
    ],
    "source": [
     "#DataFlair - Split the dataset\n",
-    "x_train,x_test,y_train,y_test=load_data(test_size=0.2)"
+    "x_train,x_test,y_train,y_test=load_data(test_size=0.15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1075, 269)\n"
+      "(537, 101)\n"
      ]
     }
    ],
@@ -215,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -233,27 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "#DataFlair - Initialize the Multi Layer Perceptron Classifier\n",
-    "model=MLPClassifier(alpha=0.001, batch_size=32, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=250)"
+    "model=MLPClassifier(alpha=0.001, batch_size=32, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "MLPClassifier(alpha=0.001, batch_size=32, hidden_layer_sizes=(300,),\n",
-       "              learning_rate='adaptive', max_iter=250)"
+       "              learning_rate='adaptive', max_iter=300)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 86.99%\n"
+      "Accuracy: 72.28%\n"
      ]
     }
    ],
@@ -295,24 +327,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "734 610\n"
+      "Accuracy Score : 0.7227722772277227\n",
+      "Precision Score : 0.7227722772277227\n",
+      "[[[78  6]\n",
+      "  [ 3 14]]\n",
+      "\n",
+      " [[56 16]\n",
+      "  [ 4 25]]\n",
+      "\n",
+      " [[69  3]\n",
+      "  [15 14]]\n",
+      "\n",
+      " [[72  3]\n",
+      "  [ 6 20]]]\n",
+      "367 305\n"
      ]
     }
    ],
    "source": [
+    "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred)))\n",
+    "print('Precision Score : ' + str(precision_score(y_test,y_pred,average='micro')))\n",
+    "#print('Recall Score : ' + str(recall_score(y_test,y_pred), average='micro'))\n",
+    "#print('F1 Score : ' + str(f1_score(y_test,y_pred))\n",
+    "print(str(multilabel_confusion_matrix(y_test, y_pred, labels=['neutral', 'happy', 'sad', 'angry'])))\n",
     "print(a,b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +378,7 @@
    ],
    "source": [
     "xtest=[]\n",
-    "files= \"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_06\\\\03-01-01-01-01-01-06.wav\"\n",
+    "files= \"C:\\\\Users\\\\hp\\\\Documents\\\\Study Material\\\\OE-DM\\\\Speech-Emotion-Recogniser\\\\speech-emotion-recognition-ravdess-data\\\\Actor_08\\\\03-01-01-01-01-01-08.wav\"\n",
     "features= extract_feature(files, mfcc=True, chroma=True, mel=True)\n",
     "xtest.append(features)\n",
     "predict= model.predict(xtest)"
@@ -336,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -509,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sad']\n"
+      "['angry']\n"
      ]
     }
    ],
